# bsv-payment-axum-middleware

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: paid_endpoint.rs
src/: config.rs  error.rs  extractor.rs  headers.rs  lib.rs  middleware.rs  payment.rs
tests/: error_response_tests.rs  integration_tests.rs  middleware_smoke.rs
tests/common/: mock_wallet.rs  mod.rs  test_server.rs
