[package]
name = "bsv-payment-axum-middleware"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "HTTP 402 BSV payment middleware for axum (port of TypeScript payment-express-middleware)"
license-file = "LICENSE"
readme = "README.md"
keywords = ["bsv", "payment", "axum", "http-402", "middleware"]
categories = ["web-programming::http-server"]
exclude = ["docs/*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "bsv_payment_axum_middleware"

[dependencies]
bsv-sdk = { version = "0.2", features = ["network"] }
bsv-auth-axum-middleware = "0.1.1"
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
http = "1"
tokio = { version = "1.51", features = ["sync", "rt"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1.51", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
